@@ -40,6 +40,7 @@ Improvements::
 
 Bug Fixes::
 
+* correctly align block image in raster format in column when align is right or center and page columns are enabled (#2433)
 * correctly map all icons from FontAwesome 4 (#2373)
 * resolve remote image in document title or section title with autogenerated ID
 * keep caret between items in menu macro with previous item if items wrap
